[package]
name = "rpnx"
version = "1.0.0"
edition = "2021"
authors = ["Louis Rubet <lrubet@gmail.com>"]
description = "Reverse Polish Notation CLI calculator"
license = "LGPL-3.0"
repository = "https://github.com/louisrubet/rpnx"

[[bin]]
name = "rpnx"
path = "src/main.rs"

[dependencies]
rug = { version = "1.24", features = ["float", "complex", "rand"] }
rustyline = "14.0"
lazy_static = "1.5"
regex = "1.11"
thiserror = "2.0"
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
